// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-simple-toast #render should render alert simple toast 1`] = `
<gux-simple-toast accent="alert">
  <!---->
  <div class="gux-alert gux-icon">
    <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  </div>
  <div class="gux-message">
    <div slot="message">
      This is the message
    </div>
  </div>
  <button class="gux-dismiss-button" title="Dismiss">
    <gux-icon icon-name="close" screenreader-text="Dismiss"></gux-icon>
  </button>
</gux-simple-toast>
`;

exports[`gux-simple-toast #render should render neutral simple toast 1`] = `
<gux-simple-toast accent="neutral">
  <!---->
  <div class="gux-icon gux-neutral">
    <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  </div>
  <div class="gux-message">
    <div slot="message">
      This is the message
    </div>
  </div>
  <button class="gux-dismiss-button" title="Dismiss">
    <gux-icon icon-name="close" screenreader-text="Dismiss"></gux-icon>
  </button>
</gux-simple-toast>
`;

exports[`gux-simple-toast #render should render positive simple toast 1`] = `
<gux-simple-toast accent="positive">
  <!---->
  <div class="gux-icon gux-positive">
    <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  </div>
  <div class="gux-message">
    <div slot="message">
      This is the message
    </div>
  </div>
  <button class="gux-dismiss-button" title="Dismiss">
    <gux-icon icon-name="close" screenreader-text="Dismiss"></gux-icon>
  </button>
</gux-simple-toast>
`;

exports[`gux-simple-toast #render should render warning simple toast 1`] = `
<gux-simple-toast accent="warning">
  <!---->
  <div class="gux-icon gux-warning">
    <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  </div>
  <div class="gux-message">
    <div slot="message">
      This is the message
    </div>
  </div>
  <button class="gux-dismiss-button" title="Dismiss">
    <gux-icon icon-name="close" screenreader-text="Dismiss"></gux-icon>
  </button>
</gux-simple-toast>
`;
